Project Finished Finishing touches added with css as well as font changed, since the other one had different opacities for some letters which was ugly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Bellefair:400,700&amp;lang=en" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quintessential:400,700&amp;lang=en" />
     <link rel="stylesheet" href="index.css">
     <title>Mock Sign-Up Form</title>
 </head>
